# NexaFiscal-I2A2

./: .gitignore  API_DOCS.md  ARQUIVOS_PARA_GITHUB.md  LICENSE  README.md  chat_workflow.py  init_db.py  pyproject.toml  replit.md  workflow_graph.py
Projeto Final - Artefatos/: README.md
agents/: analysis_agent.py  classification_agent.py  critic_agent.py  extraction_agent.py  integration_agent.py  orchestrator_agent.py  table_mapping_agent.py  validation_agent.py
api/: __init__.py  main.py  schemas.py
config/: tax_config.json  tax_config.json.backup_20251031_051044
database/: __init__.py  repository.py  session.py
nexafiscal-github/: GITHUB_UPLOAD_MANUAL.md  LICENSE  app.py
nexafiscal-github/agents/: __init__.py
nexafiscal-github/database/: models.py
nexafiscal-github/services/: __init__.py  chat_service.py
nexafiscal-github/utils/: file_processor.py  validators.py
pages/: batch_processing.py  chat.py  dashboard.py  sefaz_integration.py  table_upload.py  tax_config.py
services/: analysis_service.py  batch_service.py  document_service.py  sefaz_service.py
utils/: __init__.py  table_processor.py  tax_config_loader.py
